--- a/css/estilo.css
+++ b/css/estilo.css
@@ -367,6 +367,7 @@
 }
 
 body {
+    text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
     line-height: 1.6;
     color: var(--gray-800);
